# drf-fastserializers

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml
benchmarks/: bench.py  plot.py  settings.py
src/drf_fastserializers/: __init__.py  _compat.py  _errors.py  _payload.py  accelerator.py  migrate.py  models.py  parser.py  renderer.py  serializer.py  spectacular.py
tests/: apps.py  conftest.py  models.py  settings.py  test_accelerator.py  test_errors.py  test_from_drf_computed.py  test_from_drf_read_only.py  test_from_drf_smf.py  test_from_model.py  test_migrate.py  test_pagination.py  test_parser.py  test_partial.py  test_renderer.py  test_serializer.py  test_spectacular.py  test_values_fields.py  test_view_integration.py  urls.py
